[package]
name = "kona-supervisor-service"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Workspace dependencies
kona-supervisor-core = { workspace = true }
kona-supervisor-rpc = { workspace = true, features = ["jsonrpsee"] }
kona-supervisor-storage = { workspace = true }
kona-supervisor-metrics = { workspace = true }
kona-interop.workspace = true
kona-supervisor-types.workspace = true

# External dependencies
jsonrpsee = { workspace = true, features = ["macros", "server"] }
mockall = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true}
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kona-genesis = { workspace = true }
kona-protocol = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = { workspace = true }
derive_more.workspace = true

# Dev dependencies
alloy-rpc-client = { workspace = true }
