[package]
name = "op-alloy-rpc-types-engine"
description = "Optimism RPC types for the `engine` namespace"

version = "0.23.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://github.com/ethereum-optimism/optimism"
authors = ["Alloy Contributors"]
repository = "https://github.com/ethereum-optimism/optimism"
exclude = ["benches/", "tests/"]

[lints]
workspace = true

[dependencies]
# Workspace
op-alloy-consensus.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true

# Encoding
snap = { workspace = true, optional = true }
ethereum_ssz = { workspace = true, optional = true }
ethereum_ssz_derive = { workspace = true, optional = true }

# serde
serde = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

# misc
thiserror.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }

# hashing
sha2.workspace = true

derive_more = { workspace = true, features = ["as_ref", "deref_mut"] }

[dev-dependencies]
arbtest.workspace = true
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["arbitrary", "getrandom"] }

[features]
default = ["std", "serde"]
std = [
	"dep:snap",
	"dep:ethereum_ssz",
	"dep:ethereum_ssz_derive",
	"alloy-rpc-types-engine/ssz",
	"alloy-primitives/std",
	"alloy-rpc-types-engine/std",
	"op-alloy-consensus/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-rlp/std",
	"alloy-serde?/std",
	"derive_more/std",
	"serde?/std",
	"sha2/std",
	"thiserror/std"
]
serde = [
	"dep:serde",
	"dep:alloy-serde",
	"alloy-rpc-types-engine/serde",
	"op-alloy-consensus/serde",
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde"
]
k256 = ["op-alloy-consensus/k256"]
arbitrary = [
	"std",
	"dep:arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-primitives/rand",
	"op-alloy-consensus/arbitrary",
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-rpc-types-engine/arbitrary",
	"alloy-serde?/arbitrary"
]
